Getfirst and lasts removed