@@ -239,8 +239,8 @@ public class Objectives {
                 // AvatarCoor: x, y, numCoinsPickedUp, OG Coins, if Trial True (0 false, 1 true)
                 mouseCoor = mousePointer.mouseMoves();
 
-                currMouseXCoor = mouseCoor.getFirst();
-                currMouseYCoor = mouseCoor.getLast();
+                currMouseXCoor = mouseCoor.get(0);
+                currMouseYCoor = mouseCoor.get(1);
                 String tileTitle = mousePointer.convertCoor(world, mouseCoor);
                 if ((initMouseXCoor != currMouseXCoor) || (initMouseYCoor != currMouseYCoor)) {
                     mousePointer.displayNothing();
@@ -271,7 +271,7 @@ public class Objectives {
                         avatarCoor.add(OGCoin3.get(0));
                         avatarCoor.add(OGCoin3.get(1));
                     }
-                    int x = avatarCoor.getFirst();
+                    int x = avatarCoor.get(0);
                     int y = avatarCoor.get(1);
                     numCoinsPickedUpInTrial = avatarCoor.get(2);
                     int OGCoins = avatarCoor.get(3);
