@@ -104,8 +104,8 @@ public class PlayingGame {
             while (expectingInput) {
                 mouseCoor = mousePointer.mouseMoves();
 
-                currMouseXCoor = mouseCoor.getFirst();
-                currMouseYCoor = mouseCoor.getLast();
+                currMouseXCoor = mouseCoor.get(0);
+                currMouseYCoor = mouseCoor.get(1);
                 String tileTitle = mousePointer.convertCoor(world, mouseCoor);
                 if ((initMouseXCoor != currMouseXCoor) || (initMouseYCoor != currMouseYCoor)) {
                     mousePointer.displayNothing();
@@ -150,7 +150,7 @@ public class PlayingGame {
                         avatarCoor.add(OGCoin3.get(0));
                         avatarCoor.add(OGCoin3.get(1));
                     }
-                    int x = avatarCoor.getFirst();
+                    int x = avatarCoor.get(0);
                     int y = avatarCoor.get(1);
                     int numLoops = avatarCoor.get(2);
                     int trialBool = avatarCoor.get(4);
